--- a/DeepDiveProject.html
+++ b/DeepDiveProject.html
@@ -4,9 +4,88 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deep Dive Project</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
+
   <body>
-    <h1>Deep Dive 1 Project</h1>
-    <h2>User Stories</h2>
+    <section class="title">
+      <div class="box">
+        <h1>Deep Dive 1 Project: User Stories</h1>
+      </div>
+    </section>
+
+    <h2>By: Alex Lux, February 28, 2021</h2>
+    <section class="content">
+      <p>
+        User Stories help Software Engineers organize work in a way that follows
+        Agile values and principles. Agile principles which state that working
+        software is the primary measure of progress. Our highest priority is to
+        satisfy the customer through early and continuous delivery of valuable
+        software. Simplicity the art of maximizing the amount of work not done
+        is essential.
+      </p>
+      <p>
+        To achive these principles a team has to sort out features by priority.
+        Progress can also be ranked by splitting up tasks in to "to do", "doing"
+        and "done". These tasks can be put in to simple stories that describe
+        what the users world must look like. An example storie would be, as a
+        registered user I want to change my password so I can keep my account
+        secure. Another example, as a website visitor I want to subscribe to the
+        mailing list for a product so I can get product updates through email.
+      </p>
+      <p>
+        User stories are a good way to represent hte idea of what the user needs
+        withought getting bogged down on the implementation details. When our
+        development efforts are driven by stories that represent our
+        understanding of user needs it supports our principles and fosters good
+        development practices. Stories htat are written in ways that violate our
+        principles will hinder good development practices. Anything we can do to
+        increase the quality of our stories will make the rest of our
+        development process more efficient.
+      </p>
+      <p>
+        An example of a bad user story would be, as a developer I want a
+        database with all the tables to model the data so I can store
+        information the application needs. This breaks our principles because it
+        provides no value to the costumer. Also The information we need will
+        only be know when we figure out how we are going to build other parts of
+        the system. A story like this is a prerequisite for and a dependecy of
+        every other story.
+      </p>
+      <p>
+        Software projects that usually fail weren't focused on delivering actual
+        business value to the user on a regualr basis. Building the application
+        the way the user thinks about value minimizes risk.
+      </p>
+      <p>
+        One of the problems that user stories address are the communication
+        problem between the people who want the software and the people who will
+        build it. If either side dominates, the business loses. If the business
+        side dominates the functionality and dates are mandated with little
+        regard for reality or whether the developers undestand the requiements.
+        If the developers dominate technical jargon replaces the language of the
+        business and developers lose the opportunity to learn from listening.
+      </p>
+    </section>
+
+    <section class="sources">
+      <h2>SOURCES:</h2>
+      <a href="https://www.mountaingoatsoftware.com/agile/user-stories"
+        >Mike Cohn</a
+      >
+      &emsp;
+      <a href="https://www.atlassian.com/agile/project-management/user-stories"
+        >Max Rehkopf</a
+      >
+      &emsp;
+      <a href="https://www.youtube.com/watch?v=tKSUokG3Y0w">LongDa Yin</a>
+      &emsp;
+      <a href="https://www.youtube.com/watch?v=SRRQCDZQ6G4">Simplilearn</a>
+      &emsp;
+      <a
+        href="https://www.romanpichler.com/blog/10-tips-writing-good-user-stories/"
+        >Roman Pichler</a
+      >
+    </section>
   </body>
 </html>
